[package]
name = "cubist"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.2"
async-recursion = "1.0.5"
async-trait = "0.1.77"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.16"
blake3 = { version = "1.5", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11", features = ["color"] }
fastcdc = { version = "3.1", features = ["tokio"] }
log = "0.4"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
walkdir = "2.4"
zstd = "0.13.0"
