[package]
name = "cubist"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-channel = "2.2"
async-recursion = "1.0"
async-stream = "0.3"
async-walkdir = { git = "https://github.com/jdanford/async-walkdir.git", branch = "richer-errors" }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.16"
base64 = "0.22"
bincode = "1.3"
blake3 = { version = "1.5", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
concolor-clap = "0.1"
env_logger = { version = "0.11", features = ["color"] }
fastcdc = { version = "3.1", features = ["tokio"] }
humansize = "2.1"
humantime = "2.1"
itertools = "0.12"
log = "0.4"
md5 = "0.7"
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
snailquote = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
zstd = "0.13"
