[package]
name = "cubist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-channel = "2.5"
async-recursion = "1.1"
async-stream = "0.3"
async-walkdir = "2.1"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.112"
base64 = "0.22"
bincode = { version = "2.0", features = ["serde"] }
blake3 = { version = "1.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
concolor-clap = "0.1"
env_logger = { version = "0.11", features = ["color"] }
fastcdc = { version = "3.2", features = ["tokio"] }
humansize = { git = "https://github.com/LeopoldArkham/humansize.git", rev = "be4ac44" }
humantime = "2.3"
itertools = "0.14"
log = "0.4"
md5 = "0.8"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snailquote = "0.3"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
zstd = "0.13"
